Add humidity support
